--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.8.3",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.11",
+    "date-fns": "^2.30.0",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
     "framer-motion": "^10.16.4",
@@ -24,9 +25,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-stars": "^2.2.5",
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/react-stars": "^2.2.2",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4"
   }
