--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
     "framer-motion": "^10.16.4",
+    "i18next": "^23.5.1",
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-stars": "^2.2.5",
