--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "eslint-config-next": "13.5.4",
     "framer-motion": "^10.16.4",
     "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
     "next": "13.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hydration-provider": "^2.0.0",
     "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
