--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stratup",
+  "name": "startup",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,34 +9,57 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
-    "@next/font": "13.5.4",
-    "@types/node": "20.8.3",
-    "@types/react": "18.2.25",
-    "@types/react-dom": "18.2.11",
-    "date-fns": "^2.30.0",
-    "eslint": "8.51.0",
-    "eslint-config-next": "13.5.4",
-    "framer-motion": "^10.16.4",
-    "i18next": "^23.5.1",
-    "i18next-browser-languagedetector": "^7.1.0",
-    "i18next-http-backend": "^2.2.2",
-    "next": "13.5.4",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@graphcms/rich-text-react-renderer": "^0.6.1",
+    "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
+    "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
+    "cookie": "^0.5.0",
+    "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
+    "framer-motion": "^9.0.7",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
+    "i18next": "^22.4.10",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
+    "js-cookie": "^3.0.1",
+    "next": "13.1.6",
+    "next-auth": "^4.21.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-hydration-provider": "^2.0.0",
-    "react-i18next": "^13.2.2",
-    "react-icons": "^4.11.0",
-    "react-multi-carousel": "^2.8.4",
+    "react-drag-drop-files": "^2.3.9",
+    "react-hydration-provider": "^1.0.2",
+    "react-i18next": "^12.2.0",
+    "react-icons": "^4.7.1",
+    "react-multi-carousel": "^2.8.2",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.5",
+    "react-speech-kit": "^3.0.1",
     "react-stars": "^2.2.5",
-    "typescript": "5.2.2"
+    "react-tag-input-component": "^2.0.2",
+    "stripe": "^12.4.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
-    "@types/react-stars": "^2.2.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4"
+    "@types/cookie": "^0.5.1",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "18.14.0",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@types/react-stars": "^2.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "typescript": "4.9.5"
   }
 }
